<resources>
    <string name="app_name">InstagramClone</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">S03x74bBlXC5cSlQ1PoLfM6ZKjBsyk49bHQZMChh</string>
    <string name="back4app_client_key">mFV6tb9wUeD9kcvfnzI7xDpaKEVQK7q3vkbZcMIB</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
</resources>